--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
   <h1>Practice with Git</h1>
-  <h2>Todo: </h2>
-  <p>Change this paragraph.</p>
+  <h2>Done: </h2>
+  <p>I like cats.</p>
 
 </body>
 
