--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-  <h1>Practice with Git</h1>
-  <h2>Todo: </h2>
+  <h1>Kitties</h1>
+  <h2>are cute uwu</h2>
   <p>I like cats.</p>
+  <p><button>purr</button></p>
+  <p><img src="https://d.furaffinity.net/art/remmms/1508277030/1508277030.remmms_1457752225.lovelesskiax_remmmy_sundress.png" width="217" /></p>
+  <p><a href="https://www.furaffinity.net/view/25144598/">Spring Breeze by Remmms</a></p>
 
 </body>
 
