--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <h1>Practice with Git</h1>
-  <h2>Todo: </h2>
-  <p>Change this paragraph.</p>
+  <h1>Krazy Kangaroo</h1>
+  <h2>Done: </h2>
+  <p>Jump kick.</p>
 
 </body>
 
