--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
+  <!--Attaching Stylesheet-->
+  <link  rel="Stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <h1>Practice with Git</h1>
-  <h2>Todo: </h2>
-  <p>Change this paragraph.</p>
-
+  <!--adding a box and container class-->
+    <h1>Practice with Git</h1>
+    <div class="container">
+    <div class="box-1">
+      <h2>Todo: </h2>
+        <!--Re-written paragraph-->
+        <p><em>I</em>will change this paragraph into a paper plane folded with sharp creases.<br>
+          I will take this paragraph to the tippy-top of a <strong>Great Building</strong>,<br>
+          toss it ever-so-gently into the wind, and watch it fly.<br><br>
+          <em><strong>Helplessly driven to and fro of the wind.</strong></em><br><br>
+        <author>Michael A. Martinez</author>
+    </p>
+  </div>
+  <!--Added button class with internal video link-->
+     <a class="button" href="c:\Users\micha\Downloads\MicrosoftEdgeDropFiles\Default\0526-01_1716745135578.mp4">Motivation</a>
+</div>
+</div>
 </body>
+ $ git init
 
 </html>
