update index.html with my content

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Cats</title>
 </head>
 
 <body>
-  <h1>Practice with Git</h1>
-  <h2>Todo: </h2>
-  <p>Change this paragraph.</p>
+  <h1>All the cats!!</h1>
+  <h2>Cats: </h2>
+  <p>I love cats.</p>
 
 </body>
 
