Index.html changes
updated title, h1, h2, and p

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>The Poetic Gallery of Art Cafe</title>
   <!--Attaching Stylesheet-->
   <link  rel="Stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
   <!--adding a box and container class-->
-    <h1><em></em>Practice with Git</em></h1>
+    <h1>The Poetic Gallery of Art Cafe</h1>
     <div class="container">
     <div class="box-1">
-      <h2>Todo: </h2>
+      <h2>Windows and Doors</h2>
+      <p>The Poetic Gallery Cafe is a webpage designed with you comfert in mind. To read, hear,
+        and see some of the most genuine performing arts from new and upcoming Poets and Artist.
+       From written poems, to audio, and video clips of zealious emotions to comedy skits filled 
+       with uncontrolable laughter.<br>
         <!--Re-written paragraph-->
-        <p><em>I</em>will change this paragraph into a paper plane folded with sharp creases.<br>
-          I will take this paragraph to the tippy-top of a <strong>Great Building</strong>,<br>
-          toss it ever-so-gently into the wind, and watch it fly.<br><br>
-          <em><strong>Helplessly driven to and fro of the wind.</strong></em><br><br>
-        <author>Michael A. Martinez</author>
+        
+       <author>Michael A. Martinez</author>
     </p>
   </div>
   <!--Added button class with internal video link-->
@@ -28,6 +29,10 @@
 </div>
 </div>
 </body>
- $ git init
+ 
 
 </html>
+
+
+
+
