--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!--adding a box and container class-->
-    <h1>Practice with Git</h1>
+    <h1><em></em>Practice with Git</em></h1>
     <div class="container">
     <div class="box-1">
       <h2>Todo: </h2>
